--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.4.12", features = [] }
 tempfile = "3.9.0"
 chrono = { version = "0.4", features = [] }
+toml = "0.8.8"
+serde = { version = "1.0.193", features = ["derive"] }
