--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ tempfile = "3.9.0"
 chrono = { version = "0.4", features = [] }
 toml = "0.8.8"
 serde = { version = "1.0.193", features = ["derive"] }
+uuid = { version = "1.6.1", features = ["v4"] }
+tempdir = "0.3.7"
+
 
 [[bin]]
 name = "buckets"
