--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tempdir = "0.3.7"
 walkdir = "2.4.0"
 md5 = "0.7.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
+serde_derive = "1.0.193"
 
 [[bin]]
 name = "buckets"
