--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ walkdir = "2.4.0"
 md5 = "0.7.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 serde_derive = "1.0.193"
+sha1 = "0.11.0-pre.2"
 
 [[bin]]
 name = "buckets"
