--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ md5 = "0.7.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 serde_derive = "1.0.193"
 sha1 = "0.11.0-pre.2"
+zstd = "0.13.0"
+blake3 = "1.5.0"
+assert_cmd = "2.0.13"
 
 [[bin]]
 name = "buckets"
