--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ tempfile = "3.9.0"
 chrono = { version = "0.4", features = [] }
 toml = "0.8.8"
 serde = { version = "1.0.193", features = ["derive"] }
-uuid = { version = "1.6.1", features = ["v4"] }
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
 tempdir = "0.3.7"
 walkdir = "2.4.0"
 md5 = "0.7.0"
