--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ uuid = { version = "1.6.1", features = ["v4", "serde"] }
 tempdir = "0.3.7"
 walkdir = "2.4.0"
 md5 = "0.7.0"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde_derive = "1.0.193"
 sha1 = "0.11.0-pre.2"
 zstd = "0.13.0"
 blake3 = "1.5.0"
 assert_cmd = "2.0.13"
-predicates = "2.1.5"
+predicates = "3.1.0"
+coverage-helper = "0.2.0"
 
 [[bin]]
 name = "buckets"
