--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.4.12", features = [] }
+clap = { version = "4.4.12", features = ["derive"] }
 tempfile = "3.9.0"
 chrono = { version = "0.4", features = [] }
 toml = "0.8.8"
@@ -26,6 +26,7 @@ coverage-helper = "0.2.0"
 log = "0.4.21"
 env_logger = "0.11.3"
 sysinfo = "0.30.7"
+rand = "0.8.5"
 
 [[bin]]
 name = "buckets"
@@ -35,3 +36,6 @@ path = "src/main.rs"
 name = "tools"
 path = "src/tools/main.rs"
 
+[[bin]]
+name = "file_creator"
+path = "src/tools/file_creator.rs"
